# stem

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md
crates/stem-cli/: Cargo.toml
crates/stem-cli/src/: main.rs
crates/stem-core/: Cargo.toml
crates/stem-core/src/: ast.rs  ast_v2.rs  diagnostic.rs  io.rs  lib.rs  span.rs  theme.rs
crates/stem-exports/: Cargo.toml
crates/stem-exports/src/: docx.rs  html.rs  lib.rs  markdown.rs  math.rs  pdf.rs  style_props.rs  xlsx.rs
crates/stem-exports/src/docx/: mod.rs  package.rs  xml.rs
crates/stem-exports/src/docx/emit/: ctx.rs  drawing.rs  field.rs  hyperlink.rs  paragraph.rs  table.rs
crates/stem-exports/src/docx/parts/: doc_props.rs  document.rs  endnotes.rs  font_table.rs  header_footer.rs  mod.rs  numbering.rs  styles.rs  theme.rs  web_settings.rs
crates/stem-exports/src/docx2/: mod.rs  package.rs  xml.rs
crates/stem-exports/src/docx2/emit/: ctx.rs  drawing.rs  mod.rs  paragraph.rs  prepass.rs  run.rs  table.rs  toc.rs
crates/stem-exports/src/docx2/parts/: content_types.rs  doc_props.rs  document.rs  footnotes.rs  mod.rs  rels.rs  settings.rs  styles.rs
crates/stem-exports/src/html/: ctx.rs  style_css.rs
crates/stem-exports/src/html/elements/: block_props.rs  blockquote.rs  br.rs  code.rs  code_inline.rs  col.rs  date_block.rs  date_inline.rs  footnote.rs  heading.rs  hr.rs  image.rs  layout.rs  link.rs  list.rs  list_item.rs  math_inline.rs  mention.rs  mod.rs  note.rs  page_field.rs  pagebreak.rs  paragraph.rs  section.rs  sheet.rs  slide.rs  speaker_note.rs  tab.rs  table.rs  table_cell.rs  table_row.rs  text.rs  title.rs
crates/stem-exports/tests/: docx.rs  docx2.rs  html.rs  markdown.rs  pdf.rs  xlsx.rs
crates/stem-imports/: Cargo.toml
crates/stem-imports/src/: lib.rs  markdown.rs
crates/stem-imports/tests/: markdown.rs
crates/stem-lsp/: Cargo.toml
crates/stem-lsp/src/: backend.rs  conv.rs  main.rs
crates/stem-parser/: Cargo.toml
crates/stem-parser/src/: cook.rs  cook_v2.rs  csv.rs  cursor.rs  lib.rs  parser.rs  parser_v2.rs
crates/stem-parser/tests/: parser.rs  parser_v2.rs
crates/stem-render/: Cargo.toml
crates/stem-render/src/: docx.rs  formula.rs  html.rs  html_v2.rs  lib.rs  pdf.rs
crates/stem-render/src/html/elements/: blockquote.rs  code.rs  col.rs  date_block.rs  heading.rs  hr.rs  link.rs  list.rs  list_item.rs  math_inline.rs  mention.rs  mod.rs  note.rs  pagebreak.rs  paragraph.rs  section.rs  sheet.rs  table.rs  table_cell.rs  text.rs  title.rs
crates/stem-render/tests/: html.rs  html_v2.rs
crates/stem-types/: Cargo.toml
crates/stem-types/src/: element.rs  lib.rs  schema.rs  schema_v2.rs  validator.rs  validator_v2.rs
crates/stem-types/src/elements/: blockquote.rs  bullets.rs  caption.rs  cell.rs  chart.rs  code.rs  col.rs  date.rs  fill.rs  footer.rs  footnote.rs  format.rs  formula.rs  header.rs  heading.rs  hr.rs  image.rs  item.rs  layout.rs  li.rs  link.rs  math.rs  mention.rs  mod.rs  named.rs  note.rs  ol.rs  page_number.rs  pagebreak.rs  paragraph.rs  row.rs  section.rs  sheet.rs  slide.rs  source.rs  speaker_note.rs  table.rs  text.rs  title.rs  transition.rs  (+1 more)
crates/stem-types/tests/: validator.rs  validator_v2.rs
crates/stem-wasm/: Cargo.toml
crates/stem-wasm/src/: lib.rs
docs/: architecture.md  grammar-v2.md  grammar.md  implementing-formats.md  schema.md
examples/: paper.stem  paper_boringcrypto.stem  roadmap.stem
scripts/: serve-playground.sh
tools/: extract_docx_to_stem.py
web/: index.html  index.js  styles.css
