[package]
name = "stem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST and core types for the Stem markup language"

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
