[package]
name = "stem-exports"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Export Stem documents to external formats — one module per format under cargo features."

[dependencies]
stem-core = { workspace = true }
stem-parser = { workspace = true }
stem-types = { workspace = true }
thiserror = { workspace = true }
pulldown-latex = { version = "0.7.1", optional = true }
printpdf = { version = "0.9.1", optional = true }
# `zip` packages the OOXML parts the `docx` module emits directly.
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }
rust_xlsxwriter = { version = "0.95.0", optional = true }

[dev-dependencies]
stem-imports = { workspace = true, features = ["markdown"] }
# Used by docx tests to crack open the produced .docx ZIP and grep the
# OOXML in `word/document.xml`.
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[features]
default = ["html"]
# `html` includes the LaTeX-to-MathML conversion for @math.
html = ["dep:pulldown-latex"]
markdown = []
pdf = ["dep:printpdf"]
docx = ["dep:zip"]
xlsx = ["dep:rust_xlsxwriter"]
all = ["html", "markdown", "docx", "pdf", "xlsx"]
