[package]
name = "stem-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type registry and validator for Stem documents"

[dependencies]
stem-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
stem-parser = { workspace = true }
