[package]
name = "stem-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for the Stem markup language"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stem-core = { workspace = true }
stem-parser = { workspace = true }
stem-types = { workspace = true }
stem-render = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
